--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: scala
-env:
- - ACTIVATOR_VERSION=1.2.10
-before_script:
- - wget http://downloads.typesafe.com/typesafe-activator/${ACTIVATOR_VERSION}/typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
- - unzip -q typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
-script: activator-${ACTIVATOR_VERSION}-minimal/activator test
+scala:
+  - 2.11.1
+script:
+  - "cd $TRAVIS_BUILD_DIR/code"
+  - "sbt ++$TRAVIS_SCALA_VERSION test"
+  - "sbt ++$TRAVIS_SCALA_VERSION publish-local"
+notifications:
+  email: false
