--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala:
   - 2.11.1
 script:
   - sbt ++$TRAVIS_SCALA_VERSION test
-  - sbt ++$TRAVIS_SCALA_VERSION publish-local
+  - sbt ++$TRAVIS_SCALA_VERSION +publish-local
 notifications:
   email: false
 env:
