--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: scala
 jdk:
   - openjdk6
 scala:
-  - 2.10.4
   - 2.11.1
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION test
+  - sbt ++$TRAVIS_SCALA_VERSION +test
   - sbt ++$TRAVIS_SCALA_VERSION +publish-local
 notifications:
   email: false
