--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: scala
 jdk:
-  - openjdk6
+  - oraclejdk8
 scala:
-  - 2.11.1
+  - 2.11.5
 script:
   - sbt ++$TRAVIS_SCALA_VERSION +test
   - sbt ++$TRAVIS_SCALA_VERSION +publish-local
